# zero2template

./: Cargo.toml  Dockerfile  README.md  cargo-generate.toml
.github/workflows/: ci.yml
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
tests/api/: health_check.rs  helpers.rs
